--- a/deno.jsonc
+++ b/deno.jsonc
@@ -5,8 +5,8 @@
     "build": "deno run -A npm:vite build --base=./"
   },
   "compilerOptions": {
-    "jsx": "react-jsx",
-    "jsxImportSource": "https://esm.sh/preact",
+    "jsxFactory": "h",
+    "jsxFragmentFactory": "Fragment",
     "lib": [
       "deno.window",
       "dom",
