--- a/deno.jsonc
+++ b/deno.jsonc
@@ -2,7 +2,7 @@
   "lock": false,
   "tasks": {
     "dev": "deno run -A npm:vite dev",
-    "build": "deno run -A npm:vite build --target es2018 --emptyOutDir --base=./ --outDir docs"
+    "build": "deno run -A npm:vite build --target=es2015 --emptyOutDir --base=./ --outDir=docs --minify=false --sourcemap=true"
   },
   "compilerOptions": {
     "jsxFactory": "h",
