--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,29 +1,27 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
-  "organizeImports": {
-    "enabled": true
-  },
-  "linter": {
-    "enabled": true,
-    "rules": {
-      "recommended": true,
-      "style": {
-        "noNonNullAssertion": "off"
-      },
-      "suspicious": {
-        "noFallthroughSwitchClause": "off"
-      }
-    }
-  },
-  "formatter": {
-    "enabled": false,
-  },
-  "javascript": {
-    "formatter": {
-      "enabled": false,
-    }
-  },
-  "files": {
-    "ignore": ["docs","dist","node_modules"]
-  }
+	"$schema": "https://biomejs.dev/schemas/2.3.6/schema.json",
+	"assist": { "actions": { "source": { "organizeImports": "on" } } },
+	"linter": {
+		"enabled": true,
+		"rules": {
+			"recommended": true,
+			"style": {
+				"noNonNullAssertion": "off"
+			},
+			"suspicious": {
+				"noFallthroughSwitchClause": "off"
+			}
+		}
+	},
+	"formatter": {
+		"enabled": false
+	},
+	"javascript": {
+		"formatter": {
+			"enabled": false
+		}
+	},
+	"files": {
+		"includes": ["**", "!**/docs", "!**/dist", "!**/node_modules"]
+	}
 }
