--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "",
   "main": "index.js",
   "devDependencies": {
+    "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "vite": "^7.2.6"
   },
