--- a/xq-engine-wasm/Cargo.toml
+++ b/xq-engine-wasm/Cargo.toml
@@ -8,6 +8,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 lazy_static = "1.5.0"
+rand = "0.9.2"
 wasm-bindgen = "0.2.92"
 
 [dev-dependencies]
