--- a/xq-engine-wasm/Cargo.toml
+++ b/xq-engine-wasm/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+fastrand = { version = "2.3.0", features = ["js"] }
+js-sys = "0.3.69"
 lazy_static = "1.5.0"
-rand = "0.9.2"
 wasm-bindgen = "0.2.92"
 
 [dev-dependencies]
