--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "author": "",
   "main": "index.js",
   "devDependencies": {
+    "@testing-library/react": "^16.3.0",
+    "@types/bun": "^1.3.4",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
