--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "author": "",
   "main": "index.js",
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/bun": "^1.3.4",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react-swc": "^4.2.2",
-    "vite": "^7.2.6"
+    "vite": "^7.2.6",
+    "vitest": "^4.0.15"
   },
   "keywords": [],
   "license": "ISC",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "test": "bun test",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:bun": "bun test",
     "check": "tsc --noEmit"
   },
   "dependencies": {
