--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,11 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "noEmit": true // NoEmit should be true when using a bundler like Vite
+    "noEmit": true,
+    "types": [
+      "vitest/globals",
+      "@testing-library/jest-dom/vitest"
+    ]
   },
   "include": [
     "src"
