feat: Update dependencies and improve type definitions for better compatibility
Signed-off-by: zuisong <com.me@foxmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,9 @@
     "noEmit": true,
     "types": [
       "vitest/globals",
-      "@testing-library/jest-dom/vitest"
-    ]
+      "@testing-library/jest-dom/vitest",
+      "node",
+    ],
   },
   "include": [
     "src"
