--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "",
   "main": "index.js",
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@types/bun": "^1.3.4",
@@ -12,6 +13,7 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react-swc": "^4.2.2",
     "happy-dom": "^20.0.11",
+    "tailwindcss": "^4.1.18",
     "vite": "7.3.0",
     "vitest": "^4.0.16"
   },
